--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@200&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + Vue + TS</title>
+    <title>Mattias Gulec</title>
   </head>
   <body>
     <div id="app"></div>
